--- a/Controller/LLLoginViewController.xib
+++ b/Controller/LLLoginViewController.xib
@@ -15,25 +15,11 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="E0e-Fm-ZAZ">
+        <view contentMode="scaleToFill" id="E0e-Fm-ZAZ" customClass="LLLoginView" customModule="LLTVShow" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <subviews>
-                <imageView userInteractionEnabled="NO" alpha="0.55000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back-ground" translatesAutoresizingMaskIntoConstraints="NO" id="Yds-ZX-FxE">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                </imageView>
-            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstItem="Yds-ZX-FxE" firstAttribute="leading" secondItem="E0e-Fm-ZAZ" secondAttribute="leading" id="5db-Ii-kCI"/>
-                <constraint firstItem="Yds-ZX-FxE" firstAttribute="top" secondItem="E0e-Fm-ZAZ" secondAttribute="top" id="DJa-TZ-wQ1"/>
-                <constraint firstAttribute="trailing" secondItem="Yds-ZX-FxE" secondAttribute="trailing" id="InB-Sy-ivi"/>
-                <constraint firstAttribute="bottom" secondItem="Yds-ZX-FxE" secondAttribute="bottom" id="aDy-vX-uu2"/>
-            </constraints>
             <point key="canvasLocation" x="-87" y="-586"/>
         </view>
     </objects>
-    <resources>
-        <image name="back-ground" width="417" height="736"/>
-    </resources>
 </document>
