--- a/View/LLLoginView.xib
+++ b/View/LLLoginView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -11,48 +11,90 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LLLoginView" customModule="LLTVShow" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="441"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fsb-qu-yTL">
-                    <rect key="frame" x="0.0" y="0.0" width="300" height="450"/>
-                </imageView>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dcL-rq-yqD">
-                    <rect key="frame" x="62" y="97" width="177" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="FoP-yG-92A" customClass="YokoTextField" customModule="LLTVShow" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="201" width="375" height="65"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="177" id="1NO-Hg-dia"/>
+                        <constraint firstAttribute="height" constant="65" id="OkW-fN-acX"/>
                     </constraints>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                    <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                            <color key="value" red="0.022388214760638347" green="0.0089576578458957622" blue="0.0042497423835763503" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="foregroundColor">
+                            <color key="value" red="0.74273854900000003" green="0.76640284420000004" blue="0.94127119349999999" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KIj-cw-QhU">
-                    <rect key="frame" x="62" y="161" width="177" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="agh-aA-Wab" customClass="YokoTextField" customModule="LLTVShow" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="293" width="378" height="65"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="65" id="RUh-dX-ZrD"/>
+                    </constraints>
+                    <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                            <color key="value" red="0.015510721409574435" green="0.0085521567663250746" blue="0.005346352125856246" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="foregroundColor">
+                            <color key="value" red="0.74273854900000003" green="0.76640284420000004" blue="0.94127119349999999" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NqH-gJ-gkK">
-                    <rect key="frame" x="70" y="239" width="31" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="登录"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NqH-gJ-gkK">
+                    <rect key="frame" x="112" y="380" width="151" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Vn8-55-eVp"/>
+                        <constraint firstAttribute="width" constant="151" id="xEv-Bt-jfN"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="登录" backgroundImage="barback">
+                        <color key="titleColor" red="0.0051944813829787329" green="0.0019861759330800947" blue="0.001373243141973066" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="goLogin:" destination="iN0-l3-epB" eventType="touchUpInside" id="QyU-0g-1bn"/>
+                    </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="maV-i2-Dt7">
+                    <rect key="frame" x="111" y="27" width="150" height="150"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="150" id="MbC-ns-g3u"/>
+                        <constraint firstAttribute="height" constant="150" id="sfC-pc-0ty"/>
+                    </constraints>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.91577297449111938" green="0.92274898290634155" blue="0.97457581758499146" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="dcL-rq-yqD" firstAttribute="leading" secondItem="Fsb-qu-yTL" secondAttribute="trailing" constant="-238" id="F45-3z-sAw"/>
-                <constraint firstAttribute="trailing" secondItem="Fsb-qu-yTL" secondAttribute="trailing" id="LAv-b2-yNl"/>
-                <constraint firstItem="KIj-cw-QhU" firstAttribute="top" secondItem="dcL-rq-yqD" secondAttribute="top" constant="64" id="ODR-db-WJD"/>
-                <constraint firstItem="KIj-cw-QhU" firstAttribute="width" secondItem="dcL-rq-yqD" secondAttribute="width" id="SuG-pB-4yU"/>
-                <constraint firstItem="KIj-cw-QhU" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="TNF-LA-RJV"/>
-                <constraint firstAttribute="bottom" secondItem="Fsb-qu-yTL" secondAttribute="bottom" id="aYd-fI-MmR"/>
-                <constraint firstItem="Fsb-qu-yTL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="l9s-Fm-EPj"/>
-                <constraint firstItem="dcL-rq-yqD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="97" id="qE3-it-Sep"/>
-                <constraint firstItem="Fsb-qu-yTL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="y8k-C4-fHw"/>
+                <constraint firstItem="FoP-yG-92A" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="201" id="4CG-sN-qr0"/>
+                <constraint firstAttribute="trailing" secondItem="FoP-yG-92A" secondAttribute="trailing" id="PAJ-y3-apH"/>
+                <constraint firstAttribute="trailing" secondItem="agh-aA-Wab" secondAttribute="trailing" constant="-3" id="Qf9-SL-87A"/>
+                <constraint firstItem="NqH-gJ-gkK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="380" id="SrD-GV-iLS"/>
+                <constraint firstItem="FoP-yG-92A" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="UA0-iW-8B0"/>
+                <constraint firstItem="agh-aA-Wab" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="293" id="XLs-OY-usr"/>
+                <constraint firstItem="maV-i2-Dt7" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-1.5" id="YaH-by-sLc"/>
+                <constraint firstItem="agh-aA-Wab" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="d2S-Gf-2ZS"/>
+                <constraint firstItem="maV-i2-Dt7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="27" id="piY-cc-TtJ"/>
+                <constraint firstItem="NqH-gJ-gkK" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="s1a-Jk-5Jq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-46" y="-468"/>
+            <connections>
+                <outlet property="gologin" destination="NqH-gJ-gkK" id="c0D-0a-9Ya"/>
+                <outlet property="txtlogin" destination="FoP-yG-92A" id="9Sa-sx-DPR"/>
+                <outlet property="txtpwd" destination="agh-aA-Wab" id="gOF-SL-FhF"/>
+            </connections>
+            <point key="canvasLocation" x="-374.5" y="-1567.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="barback" width="400" height="68"/>
+        <image name="logo" width="150" height="117"/>
+    </resources>
 </document>
