--- a/View/LLLoginViewController.xib
+++ b/View/LLLoginViewController.xib
@@ -19,53 +19,44 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="FoP-yG-92A" customClass="AkiraTextField" customModule="LLTVShow" customModuleProvider="target">
-                    <rect key="frame" x="62" y="197" width="250" height="60"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="FoP-yG-92A" customClass="YoshikoTextField" customModule="LLTVShow" customModuleProvider="target">
+                    <rect key="frame" x="16" y="254" width="343" height="60"/>
+                    <color key="backgroundColor" red="0.74273854900000003" green="0.76640284420000004" blue="0.94127119349999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="PRM-7n-t5h"/>
-                        <constraint firstAttribute="width" constant="250" id="Qdd-bp-SDf"/>
+                        <constraint firstAttribute="width" constant="343" id="2eW-4S-hVk"/>
+                        <constraint firstAttribute="height" constant="60" id="Nm9-t0-tvH"/>
                     </constraints>
                     <color key="textColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                    <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
-                </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="agh-aA-Wab" customClass="AkiraTextField" customModule="LLTVShow" customModuleProvider="target">
-                    <rect key="frame" x="62" y="273" width="250" height="60"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="250" id="RiH-7D-BA2"/>
-                        <constraint firstAttribute="height" constant="60" id="Ziq-AJ-2EY"/>
-                    </constraints>
-                    <color key="textColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="QeB-9L-FaD">
-                    <rect key="frame" x="74" y="370" width="100" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="5rh-nv-F9C"/>
-                        <constraint firstAttribute="height" constant="30" id="WIc-Pu-1vL"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <state key="normal" title="注册">
-                        <color key="titleColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="register:" destination="iN0-l3-epB" eventType="touchUpInside" id="RG1-dt-uwV"/>
-                    </connections>
-                </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIs-Cl-W7Y">
-                    <rect key="frame" x="0.0" y="116" width="375" height="58"/>
+                    <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                            <color key="value" red="0.94047124339999999" green="0.30746724910000001" blue="0.16002418970000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </textField>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="agh-aA-Wab" customClass="YoshikoTextField" customModule="LLTVShow" customModuleProvider="target">
+                    <rect key="frame" x="16" y="329" width="343" height="60"/>
+                    <color key="backgroundColor" red="0.74273854900000003" green="0.76640284420000004" blue="0.94127119349999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="58" id="Uar-yR-AEW"/>
+                        <constraint firstAttribute="width" constant="343" id="0kB-Ea-smL"/>
+                        <constraint firstAttribute="height" constant="60" id="1ET-ei-Xj9"/>
                     </constraints>
-                </view>
+                    <color key="textColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                            <color key="value" red="0.94047124339999999" green="0.30746724910000001" blue="0.16002418970000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="maV-i2-Dt7">
-                    <rect key="frame" x="148" y="20" width="80" height="80"/>
+                    <rect key="frame" x="112.5" y="20" width="150" height="150"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="80" id="J81-wi-I2I"/>
-                        <constraint firstAttribute="height" constant="80" id="cjN-Mm-vS7"/>
+                        <constraint firstAttribute="width" constant="150" id="GRN-na-JRt"/>
+                        <constraint firstAttribute="height" constant="150" id="XNz-TJ-oWV"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -74,10 +65,10 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="NqH-gJ-gkK">
-                    <rect key="frame" x="201" y="370" width="100" height="30"/>
+                    <rect key="frame" x="45" y="437" width="284" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="0Ps-d7-BbS"/>
-                        <constraint firstAttribute="height" constant="30" id="FIs-Zo-wsf"/>
+                        <constraint firstAttribute="width" constant="284" id="MrI-9X-AM9"/>
+                        <constraint firstAttribute="height" constant="30" id="ubk-WE-rUo"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="登录">
@@ -92,21 +83,44 @@
                         <action selector="checklogin:" destination="iN0-l3-epB" eventType="touchUpInside" id="XRf-Y5-TFW"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIs-Cl-W7Y">
+                    <rect key="frame" x="27" y="178" width="320" height="33"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="33" id="531-tX-6pk"/>
+                        <constraint firstAttribute="width" constant="320" id="wZa-ws-ks7"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="QeB-9L-FaD">
+                    <rect key="frame" x="46" y="397" width="284" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="6qy-Yg-UT6"/>
+                        <constraint firstAttribute="width" constant="284" id="Z1L-eT-MRk"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <state key="normal" title="注册">
+                        <color key="titleColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="register:" destination="iN0-l3-epB" eventType="touchUpInside" id="RG1-dt-uwV"/>
+                    </connections>
+                </button>
             </subviews>
+            <color key="tintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="aIs-Cl-W7Y" firstAttribute="top" secondItem="maV-i2-Dt7" secondAttribute="bottom" constant="16" id="0Oh-z8-qeU"/>
-                <constraint firstAttribute="trailing" secondItem="NqH-gJ-gkK" secondAttribute="trailing" constant="74" id="7lE-wq-kYW"/>
-                <constraint firstItem="maV-i2-Dt7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="Jlh-Pp-WaL"/>
-                <constraint firstItem="NqH-gJ-gkK" firstAttribute="top" secondItem="agh-aA-Wab" secondAttribute="bottom" constant="37" id="JzU-w4-68J"/>
-                <constraint firstItem="agh-aA-Wab" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="62" id="Ofi-kt-ZIT"/>
-                <constraint firstItem="FoP-yG-92A" firstAttribute="top" secondItem="aIs-Cl-W7Y" secondAttribute="bottom" constant="23" id="SFb-08-vgY"/>
-                <constraint firstItem="FoP-yG-92A" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="62" id="TBV-us-gYM"/>
-                <constraint firstItem="QeB-9L-FaD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="74" id="Uy9-y2-tMy"/>
-                <constraint firstItem="agh-aA-Wab" firstAttribute="top" secondItem="FoP-yG-92A" secondAttribute="bottom" constant="16" id="h1t-9G-bza"/>
-                <constraint firstItem="aIs-Cl-W7Y" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="reN-Qc-eXR"/>
-                <constraint firstAttribute="trailing" secondItem="aIs-Cl-W7Y" secondAttribute="trailing" id="rma-sW-fZ1"/>
-                <constraint firstItem="maV-i2-Dt7" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ru0-JI-B2c"/>
-                <constraint firstItem="QeB-9L-FaD" firstAttribute="top" secondItem="agh-aA-Wab" secondAttribute="bottom" constant="37" id="zL7-Aq-3Xg"/>
+                <constraint firstItem="aIs-Cl-W7Y" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="0IY-WA-PYD"/>
+                <constraint firstItem="agh-aA-Wab" firstAttribute="top" secondItem="FoP-yG-92A" secondAttribute="bottom" constant="15" id="0PA-EW-Bdc"/>
+                <constraint firstItem="FoP-yG-92A" firstAttribute="top" secondItem="aIs-Cl-W7Y" secondAttribute="bottom" constant="43" id="CRs-hg-jYY"/>
+                <constraint firstItem="aIs-Cl-W7Y" firstAttribute="top" secondItem="maV-i2-Dt7" secondAttribute="bottom" constant="8" id="HnR-Kk-V2O"/>
+                <constraint firstItem="QeB-9L-FaD" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mvc-CU-WVt"/>
+                <constraint firstItem="agh-aA-Wab" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="Q1a-me-8Qe"/>
+                <constraint firstItem="maV-i2-Dt7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="RRB-bp-UXR"/>
+                <constraint firstItem="QeB-9L-FaD" firstAttribute="top" secondItem="agh-aA-Wab" secondAttribute="bottom" constant="8" id="TFf-ap-s21"/>
+                <constraint firstItem="maV-i2-Dt7" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cAA-UI-QPO"/>
+                <constraint firstItem="NqH-gJ-gkK" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="jy2-Ky-Brh"/>
+                <constraint firstItem="FoP-yG-92A" firstAttribute="leading" secondItem="maV-i2-Dt7" secondAttribute="trailing" constant="-246.5" id="kPe-Fu-nbx"/>
+                <constraint firstItem="FoP-yG-92A" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="xq2-ph-Tqh"/>
+                <constraint firstItem="NqH-gJ-gkK" firstAttribute="top" secondItem="QeB-9L-FaD" secondAttribute="bottom" constant="10" id="yir-Ha-z0d"/>
             </constraints>
             <connections>
                 <outlet property="brandanimationview" destination="aIs-Cl-W7Y" id="bh6-X3-MgC"/>
@@ -115,7 +129,7 @@
                 <outlet property="txtlogin" destination="FoP-yG-92A" id="9Sa-sx-DPR"/>
                 <outlet property="txtpwd" destination="agh-aA-Wab" id="gOF-SL-FhF"/>
             </connections>
-            <point key="canvasLocation" x="-283.5" y="-1544.5"/>
+            <point key="canvasLocation" x="-284.5" y="-1545.5"/>
         </view>
     </objects>
     <resources>
