--- a/View/LLLoginViewController.xib
+++ b/View/LLLoginViewController.xib
@@ -77,7 +77,7 @@
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <state key="normal" title="登录">
-                        <color key="titleColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <state key="selected">
                         <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
