--- a/Controller/LLUerInfoView.xib
+++ b/Controller/LLUerInfoView.xib
@@ -89,7 +89,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.6218300065445026" green="0.6218300065445026" blue="0.6218300065445026" alpha="0.12342087765957446" colorSpace="calibratedRGB"/>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
