--- a/View/LLAccoutCell.xib
+++ b/View/LLAccoutCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zZb-qE-MUn">
@@ -26,10 +27,10 @@
                         </constraints>
                     </switch>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tVP-Xc-Opl">
-                        <rect key="frame" x="258" y="6.5" width="46" height="20"/>
+                        <rect key="frame" x="278" y="12.5" width="20" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="46" id="57u-lu-mft"/>
-                            <constraint firstAttribute="height" constant="20" id="X5w-m9-jnD"/>
+                            <constraint firstAttribute="width" constant="20" id="i9q-bP-XPd"/>
+                            <constraint firstAttribute="height" constant="20" id="qDH-WS-Qof"/>
                         </constraints>
                         <state key="normal" image="右箭头">
                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -56,10 +57,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="RVc-g1-e7M" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="40T-Ra-LiK"/>
-                    <constraint firstItem="tVP-Xc-Opl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6.5" id="4qD-Sm-2Ox"/>
-                    <constraint firstAttribute="trailing" secondItem="tVP-Xc-Opl" secondAttribute="trailing" constant="16" id="ChV-Wd-BiX"/>
                     <constraint firstItem="RVc-g1-e7M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="PGW-5w-OOP"/>
+                    <constraint firstItem="tVP-Xc-Opl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4.5" id="m5q-Ic-oYc"/>
                     <constraint firstItem="1KE-Zz-e55" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6.5" id="qz4-Xt-37K"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="tVP-Xc-Opl" secondAttribute="trailing" constant="14" id="t5v-vf-oQZ"/>
                     <constraint firstItem="zZb-qE-MUn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="tmw-8A-aOT"/>
                     <constraint firstAttribute="trailing" secondItem="zZb-qE-MUn" secondAttribute="trailing" constant="16" id="u4d-PR-lhf"/>
                     <constraint firstItem="1KE-Zz-e55" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="ywI-gK-uJN"/>
